# IsPowerOfTwo

./: .gitignore  CMakeLists.txt  README.md  clean.sh
src/: main.cpp
src/func/: func.hpp  func.tpp
tests/: main-t.cpp
tests/func-t/: func-t.hpp
